--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,3 +1,8 @@
+#MY CONFIG ADD-ON
+# add search function in a buffer with fzf
+
+map cmd+f      launch --location=hsplit --allow-remote-control kitty +kitten search.py @active-kitty-window-id
+
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Fonts {{{
@@ -9,7 +14,7 @@
 font_family      Hack Nerd Font
 # bold_font        auto
 # italic_font      auto
-# bold_italic_font auto
+ bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. The easiest way to select fonts is to run the `kitten
@@ -416,7 +421,7 @@ font_size 12.0
 #: The set of URL prefixes to look for when detecting a URL under the
 #: mouse cursor.
 
-# detect_urls yes
+detect_urls yes
 
 #: Detect URLs under the mouse. Detected URLs are highlighted with an
 #: underline and the mouse cursor becomes a hand over them. Even if
@@ -1177,7 +1182,7 @@ tab_powerline_style slanted
 
 #: The foreground and background colors.
 
- background_opacity 0.8
+ background_opacity 0.7
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1202,7 +1207,7 @@ tab_powerline_style slanted
 #: will only work if dynamic_background_opacity was enabled in the
 #: original config.
 
-# background_blur 0
+ background_blur 20
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
@@ -1770,7 +1775,7 @@ tab_powerline_style slanted
 #: background_opacity. If you want to use both, you are probably
 #: better off just hiding the titlebar with hide_window_decorations.
 
-# macos_option_as_alt no
+ macos_option_as_alt left
 
 #: Use the Option key as an Alt key on macOS. With this set to no,
 #: kitty will use the macOS native Option+Key to enter Unicode
