--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,6 +3,8 @@
 
 map cmd+f      launch --location=hsplit --allow-remote-control kitty +kitten search.py @active-kitty-window-id
 
+map cmd+return launch --cwd=current
+
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Fonts {{{
@@ -1437,7 +1439,7 @@ tab_powerline_style slanted
 #: See rc_custom_auth <https://sw.kovidgoyal.net/kitty/remote-
 #: control/#rc-custom-auth> for details.
 
-# allow_remote_control no
+ allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on, other
 #: programs can control all aspects of kitty, including sending text
